# vegetation-health-monitor

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  ndvi-pipeline-modis.ipynb  ndvi-pipeline.ipynb  ndvi_datamodule.py  ndvi_dataset.py  test.ipynb  train.ipynb
.github/workflows/: build-push-docker.yml
ml_dev/: create_torchscript.py  ndvi_datamodule.py  ndvi_dataset.py  pyproject.toml  test.ipynb  train.ipynb
ml_dev/src/: ndvi_datamodule.py  ndvi_dataset.py
pipelines/: Dockerfile  ndvi-historical-load.ipynb  ndvi-pipeline-modis.ipynb  ndvi_pipeline.py  pyproject.toml
pipelines/data_ingest/: ndvi_pipeline.py  pyproject.toml
pipelines/generate_cogs/: Dockerfile  generate_cogs.py  pyproject.toml
pipelines/ml_inference/: Dockerfile  inference_pipeline.py  pyproject.toml
pipelines/ml_inference/tests/: test_inference.py
ui/: app.py  pyproject.toml
