[project]
name = "vhm-ml-dev"
version = "0.0.0"
requires-python = ">=3.11"

dependencies = [
  "ipykernel",
  "matplotlib",
  "numpy",
  "torchgeo @ git+https://github.com/keves1/torchgeo.git@93039caa63009420edf1a0bc6d1dd75cfbfd95b5",
  "wandb",
  "xarray",
  "zarr",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
fix = true

[tool.ruff.lint]
extend-select = ["I", "RUF"]
