[project]
name = "vhm-pipelines"
version = "0.0.0"
requires-python = ">=3.11"

dependencies = [
  "bottleneck",
  "dask",
  "distributed",
  "numpy",
  "odc-stac",
  "planetary-computer",
  "pystac-client",
  "python-dotenv",
  "s3fs",
  "zarr",
]

[project.optional-dependencies]
dev = [
  "bokeh",
  "fiona",
  "folium",
  "ipykernel",
  "ipyleaflet",
  "leafmap",
  "matplotlib",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
fix = true

[tool.ruff.lint]
extend-select = ["I", "RUF"]
